--- a/README
+++ b/README
@@ -1,22 +1,52 @@
-This directory contains the GNU Compiler Collection (GCC).
+	Copyright (C) 2009-2022 Free Software Foundation, Inc.
 
-The GNU Compiler Collection is free software.  See the files whose
-names start with COPYING for copying permission.  The manuals, and
-some of the runtime libraries, are under different terms; see the
-individual source files for details.
+	This file is part of the GNU ISO C++ Library.  This library is free
+	software; you can redistribute it and/or modify it under the
+	terms of the GNU General Public License as published by the
+	Free Software Foundation; either version 3, or (at your option)
+	any later version.
 
-The directory INSTALL contains copies of the installation information
-as HTML and plain text.  The source of this information is
-gcc/doc/install.texi.  The installation information includes details
-of what is included in the GCC sources and what files GCC installs.
+	This library is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
 
-See the file gcc/doc/gcc.texi (together with other files that it
-includes) for usage and porting information.  An online readable
-version of the manual is in the files gcc/doc/gcc.info*.
+	Under Section 7 of GPL version 3, you are granted additional
+	permissions described in the GCC Runtime Library Exception, version
+	3.1, as published by the Free Software Foundation.
 
-See http://gcc.gnu.org/bugs/ for how to report bugs usefully.
-
-Copyright years on GCC source files may be listed using range
-notation, e.g., 1987-2012, indicating that every year in the range,
-inclusive, is a copyrightable year that could otherwise be listed
-individually.
+	You should have received a copy of the GNU General Public License and
+	a copy of the GCC Runtime Library Exception along with this program;
+	see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
+	<http://www.gnu.org/licenses/>.
+    
+NOTE:
+	Please review $(src-dir/LICENCES)
+   
+NOTE:
+	These sources are highly modified to co-relate with Scpel
+	by Phrunsys Emmasson. Thus hereby acertain that these, and most
+	of Scpel toolchain is built and inspired around GNU Compiler
+	Collections. So the GNU Toolchain covers most of the documentation,
+	portability, and architectures.
+		1)	Please Note: I highly recommend that you should merrily
+			navigate to and review the folder $(src)/LICENCES because it 
+			contains most of the good stuff that all divine tech-humanity
+			stands for.
+		2)	This specific implementation strongly supports only Scpel
+			which in turn only covers (GNU C, GNU C++) Scpel, which then
+			adds specific artificial intelligence related concepts in GCC.
+		3)	This file (SPL-README) is here because I've always found it
+			humble to have all the implementation unrelated text separated out of 
+			the source files thus keeping them precise.
+		4)	For Scpel related documentation and implementation guidelines;
+			please visit https://www.scpel.org.
+		5)	This is one of my humble works. Scpel aims at targeting
+			artificial intelligence on the ** lowest**  level possible
+			and so high at the application level using C++'s STL
+			
+			
+Yours Truly:
+	~ Emmasson 
+	  Africa-Uganda-Kampala
+	  phrunsys.scpel.256.ug@gmail.com 
